<resources>
    <string name="app_name">Comick</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_download">Download</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_reader">Reader</string>
    <string name="menu_settings">Settings</string>
    <string name="download_comic">Download</string>
    <string name="download_chapter">Download</string>
    <string name="delete_chapter">Delete</string>
    <string name="search_comic">Search</string>
    <string name="add_comic">Add</string>
    <string name="update_all_comics">Update All</string>
    <string name="update_one_comic">Update</string>
    <string name="chapter_url">Chapter Url</string>
    <string name="online_last_chapter">Online:</string>
    <string name="comic_cover_hint">Cover</string>
    <string name="downloaded_last_chapter">Downloaded:</string>
    <string name="reading_chapter">Reading:</string>
    <string name="summary_comic">Summary</string>
    <string name="back">Back</string>
    <string name="read">Read</string>
    <string name="chapter_identifier">Chapter %s</string>
    <string name="prev_chapter">Prev Chapter</string>
    <string name="next_chapter">Next Chapter</string>
    <string name="reading_offline">You are offline!</string>
    <string name="lock_rotation">Lock Rotation</string>
    <string name="unlock_rotation">Unlock Rotation</string>
    <string name="go_offline">Go Offline</string>
    <string name="go_online">Go Online</string>
    <string name="sort_az">A-Z</string>
    <string name="sort_za">Z-A</string>
    <string name="sort_added">Added</string>
    <string name="exit">Exit</string>
    <string name="lock_rotation_key" translatable="false">lock_rotation_key</string>
    <string name="last_read_key" translatable="false">last_read_key</string>
    <string name="last_is_offline_key" translatable="false">last_is_offline_key</string>
    <string name="current_chapter_prefix_key" translatable="false">current_chapter_for_</string>
    <string name="external_file_path_key" translatable="false">external_file_path</string>
    <string name="use_external_files_key" translatable="false">use_external_files</string>
    <string name="exit_dialog_headline">Confirm exit</string>
    <string name="exit_dialog_sentence">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="none">None</string>

    <string name="files_header">Files</string>

    <string name="use_external_files_title">Use External Storage for data</string>
    <string name="external_file_path_title">External file directory</string>
</resources>