<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_overview">

    <fragment
        android:id="@+id/nav_download"
        android:name="com.skillor.comick.ui.DownloadFragment"
        android:label="@string/menu_download"
        tools:layout="@layout/fragment_download" />

    <fragment
        android:id="@+id/nav_overview"
        android:name="com.skillor.comick.ui.OverviewFragment"
        android:label="@string/menu_overview"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/nav_summary"
        android:name="com.skillor.comick.ui.SummaryFragment"
        android:label="@string/menu_summary"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/nav_reader"
        android:name="com.skillor.comick.ui.ReaderFragment"
        android:label="@string/menu_reader"
        tools:layout="@layout/fragment_reader" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.skillor.comick.ui.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>