<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/comicCoverView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/comic_cover_hint"
            android:scaleType="centerInside"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_rowSpan="5" />

        <TextView
            android:id="@+id/comicTitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_columnSpan="2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/online_last_chapter"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/onlineLastChapterView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="2"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/downloaded_last_chapter"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/downloadedLastChapterView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="2"
            app:layout_row="2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reading_chapter"
            app:layout_column="1"
            app:layout_row="3" />

        <TextView
            android:id="@+id/readingChapterView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_comic"
            app:layout_column="1"
            app:layout_row="4" />

        <ProgressBar
            android:id="@+id/loadingSpinner"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/readButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/read"
            app:layout_column="2"
            app:layout_row="4" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>