<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DownloadFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/downloadUrlText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/chapter_url"
                android:inputType="textUri"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/searchUrlButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_comic" />

        </LinearLayout>

        <TextView
            android:id="@+id/downloadUrlErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/cachedComicLoadingSpinner"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/cachedComicGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ImageView
                android:id="@+id/cachedComicCoverView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/comic_cover_hint"
                android:scaleType="centerInside"
                app:layout_column="0"
                app:layout_row="0"
                app:layout_rowSpan="5" />

            <TextView
                android:id="@+id/cachedComicTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_column="1"
                app:layout_columnSpan="4"
                app:layout_row="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/online_last_chapter"
                app:layout_column="1"
                app:layout_row="1" />

            <TextView
                android:id="@+id/cachedOnlineLastChapterView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/cachedComicAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_comic"
                app:layout_column="1"
                app:layout_row="2" />

        </androidx.gridlayout.widget.GridLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>