<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OverviewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_revert"
                android:text="@string/back"
                app:layout_column="0"
                app:layout_row="0" />

            <ImageView
                android:id="@+id/summaryComicCoverView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/comic_cover_hint"
                android:scaleType="centerInside"
                app:layout_column="0"
                app:layout_row="1"
                app:layout_rowSpan="4" />

            <TextView
                android:id="@+id/summaryComicTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_column="1"
                app:layout_columnSpan="4"
                app:layout_row="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reading_chapter"
                app:layout_column="1"
                app:layout_row="2" />

            <TextView
                android:id="@+id/readingChapterView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="2"
                app:layout_row="2" />

            <Button
                android:id="@+id/readButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read"
                app:layout_column="1"
                app:layout_row="4" />

        </androidx.gridlayout.widget.GridLayout>

        <ListView
            android:id="@+id/chapterList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>